--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Presentacion-20151230131628;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Presentacion-20151230131628.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <connectionStrings>
+    <add name="SystemContext" connectionString="Server=.\SQLEXPRESS;Database=SGE;user=sa;password=12345" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
